--- a/src/components/fooditem.module.css
+++ b/src/components/fooditem.module.css
@@ -24,7 +24,7 @@
 }
 
 .itemButton {
-  background-color: #29bb89;
+  background-color: #4169e1;
   border: none;
   color: white;
   padding: 10px;
