--- a/src/components/fooditem.module.css
+++ b/src/components/fooditem.module.css
@@ -1,10 +1,11 @@
 .itemContainer {
   width: 300px;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.8);
   margin: 20px;
   overflow: hidden;
   font-family: PolySans, sans-serif;
+  margin-left: 60px;
 }
 
 .itemImage {
