--- a/src/components/fooddetails.module.css
+++ b/src/components/fooddetails.module.css
@@ -5,7 +5,7 @@
   box-shadow: 0 4px 8px rgb(0, 0, 0, 0.2);
   border-radius: 10px;
   font-family: Polysans, sans-serif;
-  color: red;
+  color: #393e46;
 }
 
 .recipeName {
