--- a/src/components/container.module.css
+++ b/src/components/container.module.css
@@ -1,3 +1,10 @@
 .parentContainer {
   display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .parentContainer {
+    flex-direction: row;
+  }
 }
