--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 body {
   margin: 0;
 }
+
+.desktop-only {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .desktop-only {
+    display: block;
+  }
+}
